<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Game</string>
    <string name="counter">0</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_fragments">FragmentsActivity</string>
    <string name="title_activity_fragment">FragmentActivity</string>
    <string name="title_activity_login__fragment">Login</string>
    <string name="username">username</string>
     <string name="email">email</string>
     <string name="login">Send</string>
     <string name="tues">TUES</string>
     <string name="tu">TU</string>
     <string name="fmi">FMI</string>
     <string name="score">"Score: "</string>

</resources>
